Remove cell borders and fix gap for large n

--- a/style.css
+++ b/style.css
@@ -17,16 +17,10 @@ body {
   height: min(75vw, 75vh);
   display: flex;
   flex-wrap: wrap;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  border: 2px solid black;
 }
 
 button {
   font-size: 1.5rem;
   padding: 1rem;
-}
-
-.container > div {
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
 }
